Esercizio completo con bonus

--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Shoes</title>
 </head>
 <body>
-    
+    <header class="parent">
+        <nav> 
+            <ul>
+                <li><a href="#sez1">1</a></li>
+                <li><a href="#sez2">2</a></li>
+                <li><a href="#sez3">3</a></li>
+            </ul>
+        </nav>
+    </header>
+        <section id="sez1" >
+                <div class="child">
+                    <img src="img/01.png" alt="articolo 1">
+                    <h1>IL NOSTRO MODELLO DI PUNTA</h1> 
+                </div>
+        </section>
+
+         <section id="sez2" >
+                <div class="child">
+                    <img src="img/02.png" alt="articolo 1">
+                    <h1>IL NOSTRO MODELLO DI PUNTA</h1> 
+                </div>
+         </section>
+
+        <section id="sez3" >
+                <div class="child">
+                    <img src="img/03.png" alt="articolo 1">
+                    <h1>IL NOSTRO MODELLO DI PUNTA</h1> 
+                </div>
+        </section>
 </body>
 </html>
