--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
             </ul>
         </nav>
     </header>
-        <section id="sez1" >
+        <section class="sezx" id="sez1" >
                 <div class="child">
                     <img src="img/01.png" alt="articolo 1">
                     <h1>IL NOSTRO MODELLO DI PUNTA</h1> 
                 </div>
         </section>
 
-         <section id="sez2" >
+         <section class="sezx" id="sez2" >
                 <div class="child">
                     <img src="img/02.png" alt="articolo 2">
                     <h1>IL NOSTRO MODELLO DI PUNTA</h1> 
                 </div>
          </section>
 
-        <section id="sez3" >
+        <section class="sezx" id="sez3" >
                 <div class="child">
                     <img src="img/03.png" alt="articolo 3">
                     <h1>IL NOSTRO MODELLO DI PUNTA</h1> 
